update visualization notebook

--- a/notebooks/widget_viz.ipynb
+++ b/notebooks/widget_viz.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "5216439d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# SpiralNet++ Visualizations"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "9a2724ad-484c-421e-bc05-0fed52c5237e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -33,7 +41,11 @@
   {
    "cell_type": "markdown",
    "id": "09b91653-df9e-4893-9092-828ac17dffcf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Load vertices"
    ]
@@ -42,7 +54,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "84e57a0b-5a34-4917-8006-6efab2207b42",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_vertices(directory: str, substring: str):\n",
@@ -60,7 +76,11 @@
   {
    "cell_type": "markdown",
    "id": "720077a7-157e-4cd2-a87a-b98dab51ca72",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Load faces"
    ]
@@ -69,7 +89,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "da1bd4c0-76ac-460c-a638-c3e436e6ff00",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_faces(directory: str):\n",
@@ -81,7 +105,11 @@
   {
    "cell_type": "markdown",
    "id": "0165e289",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Load mean and std"
    ]
@@ -90,7 +118,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "9597abf6-ac5a-4b01-85ec-01a44f43f82a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_mean_std(directory: str):\n",
@@ -105,7 +137,11 @@
   {
    "cell_type": "markdown",
    "id": "51e54470",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Interactive visualization"
    ]
@@ -114,7 +150,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "80354334-11f3-4c20-96ab-bebd2c313475",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -172,7 +212,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "3105b919-af76-44ce-9356-c33febc0cd51",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
