update pca eval notebook

--- a/src/ShapeWorks/pca.ipynb
+++ b/src/ShapeWorks/pca.ipynb
@@ -12,10 +12,12 @@
     "import igl\n",
     "import subprocess\n",
     "import numpy as np \n",
+    "import pandas as pd\n",
     "import shapeworks as sw\n",
     "import meshplot as mp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from scipy.stats import pearsonr\n",
     "from glob import glob\n",
     "from tqdm import tqdm\n",
     "from sklearn.decomposition import PCA\n",
@@ -43,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 511/511 [00:36<00:00, 14.08it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 511/511 [00:37<00:00, 13.45it/s]\n"
      ]
     }
    ],
@@ -73,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 511/511 [00:37<00:00, 13.76it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 511/511 [00:42<00:00, 12.02it/s]\n"
      ]
     }
    ],
@@ -103,7 +105,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 511/511 [00:05<00:00, 98.02it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 511/511 [00:04<00:00, 114.01it/s]\n"
      ]
     }
    ],
@@ -135,7 +137,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 511/511 [00:04<00:00, 103.55it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 511/511 [00:04<00:00, 105.21it/s]\n"
      ]
     }
    ],
@@ -260,19 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "388ed7ce-141b-420b-87ea-2fafe1ffbe1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f15aa7b6e2b04dacac8c1f1462414569",
+       "model_id": "dd54a1a4ced346ed923f66e4a21355ef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Renderer(camera=PerspectiveCamera(children=(DirectionalLight(color='white', intensity=0.6, position=(89.228321…"
+       "Renderer(camera=PerspectiveCamera(children=(DirectionalLight(color='white', intensity=0.6, position=(86.961071…"
       ]
      },
      "metadata": {},
@@ -281,12 +283,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a28d920610f04efbb975413ac0238dae",
+       "model_id": "8afdd4f397504758aab9075bd0f5100f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=-54.94605193648047, description='z0', max=117.37036920321438, min=-117…"
+       "interactive(children=(FloatSlider(value=33.90710858138857, description='z0', max=117.65642847507294, min=-117.…"
       ]
      },
      "metadata": {},
@@ -294,7 +296,7 @@
     }
    ],
    "source": [
-    "hippo_shape = 0\n",
+    "hippo_shape = 222\n",
     "\n",
     "#left\n",
     "original_mesh = mesh_list[hippo_shape]\n",
@@ -368,9 +370,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "833b8d9f-1ec6-45f7-8c29-c98f3f98e29a",
+   "metadata": {},
+   "source": [
+    "## SAP & Correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5afcdb72-d0ab-4b93-8d8a-627cdf9869a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is no label for: ab300_256\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"demographics.csv\", delimiter=\";\")\n",
+    "\n",
+    "files = glob(\"data/*.nii\")\n",
+    "\n",
+    "filenames = []\n",
+    "for filename in files:\n",
+    "    filename = filename.split(\"\\\\\")[-1].replace(\"_standard.nii\", \"\")\n",
+    "    filenames.append(filename)\n",
+    "    \n",
+    "for filename in filenames:\n",
+    "    if not filename in df.subject.to_list():\n",
+    "        print(f\"There is no label for: {filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "cef9dbf8-d60b-4cc8-b578-8da447f6fb36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>isManual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>ab300_257</td>\n",
+       "      <td>73</td>\n",
+       "      <td>F</td>\n",
+       "      <td>257</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       subject  age gender  subject_id  isManual\n",
+       "237  ab300_257   73      F         257         0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.subject == \"ab300_257\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1917615-2af3-46b4-9ea2-752d93bc21d1",
+   "metadata": {},
+   "source": [
+    "## Left hippocampus PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e62e41cb-151b-4220-acc2-76e77d0277e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAP score: 0.04\n",
+      "Correlation of age and latent code 0: 0.30\n",
+      "Correlation of age and latent code 1: -0.12\n",
+      "Correlation of age and latent code 2: 0.01\n",
+      "Correlation of age and latent code 3: -0.35\n",
+      "Correlation of age and latent code 4: -0.15\n",
+      "Correlation of age and latent code 5: -0.01\n",
+      "Correlation of age and latent code 6: 0.22\n",
+      "Correlation of age and latent code 7: -0.07\n",
+      "Correlation of age and latent code 8: -0.00\n",
+      "Correlation of age and latent code 9: 0.11\n",
+      "Correlation of age and latent code 10: 0.13\n",
+      "Correlation of age and latent code 11: 0.17\n",
+      "Correlation of age and latent code 12: 0.08\n",
+      "Correlation of age and latent code 13: -0.07\n",
+      "Correlation of age and latent code 14: -0.13\n",
+      "Correlation of age and latent code 15: 0.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "factors = df.age.to_numpy().reshape(-1,1)\n",
+    "codes = np.delete(pca_latent, 237, 0)\n",
+    "print(f\"SAP score: {sap(factors, codes):.2f}\")\n",
+    "for i in range(pca_latent.shape[1]):\n",
+    "    corr = pearsonr(factors.reshape(-1), codes[:,i])[0]\n",
+    "    print(f\"Correlation of age and latent code {i}: {corr:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad556b34-df87-4679-b87c-2ef0d892d756",
+   "metadata": {},
+   "source": [
+    "## Right hippocampus PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3a20489e-34cb-4125-bb02-794646dff1b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAP score: 0.09\n",
+      "Correlation of age and latent code 0: -0.31\n",
+      "Correlation of age and latent code 1: -0.07\n",
+      "Correlation of age and latent code 2: 0.02\n",
+      "Correlation of age and latent code 3: -0.44\n",
+      "Correlation of age and latent code 4: -0.02\n",
+      "Correlation of age and latent code 5: 0.09\n",
+      "Correlation of age and latent code 6: 0.22\n",
+      "Correlation of age and latent code 7: 0.05\n",
+      "Correlation of age and latent code 8: 0.16\n",
+      "Correlation of age and latent code 9: 0.07\n",
+      "Correlation of age and latent code 10: 0.11\n",
+      "Correlation of age and latent code 11: -0.14\n",
+      "Correlation of age and latent code 12: -0.05\n",
+      "Correlation of age and latent code 13: -0.14\n",
+      "Correlation of age and latent code 14: 0.00\n",
+      "Correlation of age and latent code 15: 0.03\n"
+     ]
+    }
+   ],
+   "source": [
+    "factors = df.age.to_numpy().reshape(-1,1)\n",
+    "codes = np.delete(right_pca_latent, 237, 0)\n",
+    "print(f\"SAP score: {sap(factors, codes):.2f}\")\n",
+    "for i in range(pca_latent.shape[1]):\n",
+    "    corr = pearsonr(factors.reshape(-1), codes[:,i])[0]\n",
+    "    print(f\"Correlation of age and latent code {i}: {corr:.2f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a812b36-acbb-47ce-a026-ae80787efcfd",
+   "id": "150daf43-6217-4ffd-afed-963edeeb7064",
    "metadata": {},
    "outputs": [],
    "source": []
